# DocAI

./: .gitignore  README.md  pyproject.toml
docai/: __init__.py  cli.py  docs.py  hooks.py  scanner.py  util.py
docai/prompts/: api.txt  overview.txt  readme.txt
docai/report/: Minor Project Report format_VSET.docx  report.md  template.docx
